--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,11 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+A toy model for users:
+
+A user is an id (integer), name (string), and an email (string)
+
+A toy model for microposts:
+
+A micropost has only and id and content field.  We also need a foreign key (user_id) from the users table.
